Separei o banco de dados

--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -25,7 +25,7 @@
         </div>
     </form>
     <div>
-        <button onclick=deleteProduct()>Deletar</button>
+        <button onclick=deleteAction()>Deletar</button>
     </div>
 
     <script src="produto-detalhe.js"></script>
