--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
 <div id="product-list"></div>
 
-<script src="index.js"></script>
+<script type="module" src="index.js"></script>
 </body>
 </html>
