paginas funcionando mas nao atualizando

--- a/produto-cadastro.html
+++ b/produto-cadastro.html
@@ -25,6 +25,6 @@
         </div>
     </form>
 
-<script src="produto-cadastro.js"></script> 
+<script type="module" src="produto-cadastro.js"></script> 
 </body>
 </html>
