--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -25,9 +25,9 @@
         </div>
     </form>
     <div>
-        <button onclick=deleteAction()>Deletar</button>
+        <button id="delete" >Deletar</button>
     </div>
 
-    <script src="produto-detalhe.js"></script>
+    <script type="module" src="produto-detalhe.js"></script>
 </body>
 </html>
