--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -6,24 +6,24 @@
     <title>Produto - Detalhes</title>
 </head>
 <body>
-    <form id="update">
-        <header>Cadastro de Produtos</header>
-        <div>
-            <div><label>Nome</label></div>
-            <input type="text" id="item" required/>
-        </div>
-        <div>
-            <div><label>Preço</label></div>
-            <input type="text" id="price" required/>
-        </div>
-        <div>
-            <div><label>Descrição</label></div>
-            <textarea type="text" id="description" required></textarea>  
-        </div>
-        <div>
-            <button type="submit">Atualizar</button>
-        </div>
-    </form>
+    
+    <header>Cadastro de Produtos</header>
+    <div>
+        <div><label>Nome</label></div>
+        <input type="text" id="item" required/>
+    </div>
+    <div>
+        <div><label>Preço</label></div>
+        <input type="text" id="price" required/>
+    </div>
+    <div>
+        <div><label>Descrição</label></div>
+        <textarea type="text" id="description" required></textarea>  
+    </div>
+    <div>
+        <button id = "update">Atualizar</button>
+    </div>
+    
     <div>
         <button id="delete" >Deletar</button>
     </div>
