trabalhando no css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Produtos</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="gpt.css">
 </head>
+<header class="header">
+    <h1>GroupStore</h1>
+    <div class="search-container">
+        <input type="text" class="search-box" placeholder="busque seus cadastros">
+        <button class="search-button">🔍</button>
+    </div>
+</header>
 <body>
-<header>Lista de Produtos</header>
-<button onclick="window.location.href='produto-cadastro.html';">Cadastrar novo produto</button>
 
-<div id="product-list"></div>
+
+    
+    <div id="product-list"></div>
+    
+    <div class="button-container">
+        <button class="new-registration" onclick="window.location.href='produto-cadastro.html';">Novo Cadastro</button>
+    </div>
 
 <script type="module" src="index.js"></script>
 </body>
