Index.html quase pronta

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <h1>GroupStore</h1>
     <div class="search-container">
         <input type="text" class="search-box" placeholder="busque seus cadastros">
-        <button class="search-button">🔍</button>
+        <button class="search-button"></button>
     </div>
 </header>
 <body>
 
 
-    
-    <div id="product-list"></div>
+    <div class="product-list-container">
+        <div id="product-list"></div>        
+    </div>
+
     
     <div class="button-container">
         <button class="new-registration" onclick="window.location.href='produto-cadastro.html';">Novo Cadastro</button>
