Css em todas as paginas

--- a/produto-cadastro.html
+++ b/produto-cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Produtos - Pedro Castro</title>
-    <link rel="stylesheet" href="produto-cadastro.css">
+    <link rel="stylesheet" href="produto.css">
 </head>
 <body>
     <header class="header">
